# nix-health

./: .gitignore  Cargo.toml  README.md  flake.nix  garnix.yaml  rust-toolchain.toml
.github/workflows/: ci.yaml
src/: lib.rs  main.rs  traits.rs
src/check/: min_nix_version.rs  mod.rs  rosetta_installed.rs
