[package]
name = "nix_health"
version = "0.3.0"
license = "Apache-2.0"
repository = "https://github.com/juspay/nix-health"
description = "Check the health of your Nix setup"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nix-health"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
cfg-if = "1"
clap = { version = "4.3", features = ["derive", "env"] }
regex = "1.9.3"
thiserror = "1.0"
serde_json = "1.0"
serde_with = { version = "3.2", features = ["json"] }
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1"
url = { version = "2.4", features = ["serde"] }
nix_rs = "0.5.0"
direnv = "0.1.1"
human-panic = "1.1.5"
anyhow = { version = "1.0.75" }
colored = { version = "2.0" }
which = { version = "4.4.2" }
bytesize = { version = "1.3.0", features = ["serde"] }
semver = { version = "1.0.22", features = ["serde"] }
serde_repr = "0.1.18"
